// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OcResourceIcon renders OcIcon for resource type file in size large 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" filltype="fill" name="resource-type-file" size="large" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file in size medium 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" filltype="fill" name="resource-type-file" size="medium" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file in size small 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" filltype="fill" name="resource-type-file" size="small" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file in size xlarge 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" filltype="fill" name="resource-type-file" size="xlarge" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file in size xsmall 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" filltype="fill" name="resource-type-file" size="xsmall" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file in size xxlarge 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" filltype="fill" name="resource-type-file" size="xxlarge" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file in size xxxlarge 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" filltype="fill" name="resource-type-file" size="xxxlarge" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with extension "not-a-real-extension" in size large 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="red" filltype="fill" name="resource-type-madeup-extension" size="large" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with extension "not-a-real-extension" in size medium 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="red" filltype="fill" name="resource-type-madeup-extension" size="medium" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with extension "not-a-real-extension" in size small 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="red" filltype="fill" name="resource-type-madeup-extension" size="small" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with extension "not-a-real-extension" in size xlarge 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="red" filltype="fill" name="resource-type-madeup-extension" size="xlarge" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with extension "not-a-real-extension" in size xsmall 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="red" filltype="fill" name="resource-type-madeup-extension" size="xsmall" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with extension "not-a-real-extension" in size xxlarge 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="red" filltype="fill" name="resource-type-madeup-extension" size="xxlarge" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with extension "not-a-real-extension" in size xxxlarge 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="red" filltype="fill" name="resource-type-madeup-extension" size="xxxlarge" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with mimetype "not-a-real-mimetype" in size large 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="blue" filltype="fill" name="resource-type-madeup-mimetype" size="large" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with mimetype "not-a-real-mimetype" in size medium 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="blue" filltype="fill" name="resource-type-madeup-mimetype" size="medium" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with mimetype "not-a-real-mimetype" in size small 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="blue" filltype="fill" name="resource-type-madeup-mimetype" size="small" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with mimetype "not-a-real-mimetype" in size xlarge 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="blue" filltype="fill" name="resource-type-madeup-mimetype" size="xlarge" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with mimetype "not-a-real-mimetype" in size xsmall 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="blue" filltype="fill" name="resource-type-madeup-mimetype" size="xsmall" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with mimetype "not-a-real-mimetype" in size xxlarge 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="blue" filltype="fill" name="resource-type-madeup-mimetype" size="xxlarge" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with mimetype "not-a-real-mimetype" in size xxxlarge 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-file" color="blue" filltype="fill" name="resource-type-madeup-mimetype" size="xxxlarge" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type folder in size large 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-folder" color="var(--oc-color-icon-folder)" filltype="fill" name="resource-type-folder" size="large" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type folder in size medium 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-folder" color="var(--oc-color-icon-folder)" filltype="fill" name="resource-type-folder" size="medium" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type folder in size small 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-folder" color="var(--oc-color-icon-folder)" filltype="fill" name="resource-type-folder" size="small" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type folder in size xlarge 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-folder" color="var(--oc-color-icon-folder)" filltype="fill" name="resource-type-folder" size="xlarge" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type folder in size xsmall 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-folder" color="var(--oc-color-icon-folder)" filltype="fill" name="resource-type-folder" size="xsmall" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type folder in size xxlarge 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-folder" color="var(--oc-color-icon-folder)" filltype="fill" name="resource-type-folder" size="xxlarge" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type folder in size xxxlarge 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-folder" color="var(--oc-color-icon-folder)" filltype="fill" name="resource-type-folder" size="xxxlarge" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type space in size large 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-space" color="var(--oc-color-swatch-passive-default)" filltype="fill" name="layout-grid" size="large" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type space in size medium 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-space" color="var(--oc-color-swatch-passive-default)" filltype="fill" name="layout-grid" size="medium" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type space in size small 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-space" color="var(--oc-color-swatch-passive-default)" filltype="fill" name="layout-grid" size="small" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type space in size xlarge 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-space" color="var(--oc-color-swatch-passive-default)" filltype="fill" name="layout-grid" size="xlarge" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type space in size xsmall 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-space" color="var(--oc-color-swatch-passive-default)" filltype="fill" name="layout-grid" size="xsmall" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type space in size xxlarge 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-space" color="var(--oc-color-swatch-passive-default)" filltype="fill" name="layout-grid" size="xxlarge" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type space in size xxxlarge 1`] = `
<span>
  <oc-icon-stub accessiblelabel="" class="oc-resource-icon oc-resource-icon-space" color="var(--oc-color-swatch-passive-default)" filltype="fill" name="layout-grid" size="xxxlarge" type="span" variation="passive"></oc-icon-stub>
  <!--v-if-->
</span>
`;
